# NUMS_messaging

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: DbAqi.h  Debug.h  DebugDef.h  E4Noti.h  ECommon.h  EConvert.h  EDebug.h  EErrno.h  EErrorCode.h  EFile.h  EInclude.h  EIpc.h  EIs.h  EMacro.h  EMinMask.h  EPreProcess.h  EProcess.h  EString.h  ESvcUtil.h  ETime.h  ErrorHistory.h  Esme_Macro.h  Esme_Struct.h  FLKBaseDef.h  FLKSimBaseDef.h  MSCapability.h  MapMacro.h  Map_Maxvaldef.h  Map_Param.h  Map_Struct.h  MdbCommon.h  MdbDataStruct.h  MdbDmaqi.h  MdbErrRsn.h  MdbMessage.h  MdbQmi.h  MdbStatus.h  MdbTableInfo.h  MdbTrigger.h  SimCom.h  (+23 more)
cpp/include/SimCommon/: EIo.h  EProfile.h  flk_string.h  libSimTable.h  libdbg.h  libipc.h  libnet.h  libtime.h  libutil.h
cpp/include/SimMap/: libGsmTpduParam.h  libGsmTpduStruct.h  libGsmTpduValue.h  libMap2G.h  libMap2G_Addr.h  libMap2G_St.h  libMap3G_Addr.h  libMap3G_st.h  libMapAddrUtil.h  libMapAddrUtilMacro.h  libMapComm.h  libMapDebug.c  libMapDebug.h  libMapUtil.h  libMapV3Extension.h  libMapV3FowardSM.h  libTcapHandler.h
cpp/include/flk_dbm/: flk_dbm.h  gdbmdefs.h  gdbmerrno.h  proto.h  systems.h
cpp/include/gwlib/: charset.h  conn.h  dbpool.h  dbpool_mysql.h  dbpool_p.h  flkini.h  flkipc.h  flkpstat.h  gw-config.h  gw-config.h.hpux  gw-hpux-config.h  gw-linux-config.h  gwlib.h  http.h  keylist.h  log.h  mime.h  mms_cfg.def  mms_cfg.h  mms_mm7soap.h  mms_msg.h  mms_queue.h  mms_strings.def  mms_strings.h  mms_uaprof.h  mms_util.h  msg.h  octstr.h  smpp_pdu.def  smpp_pdu.h  smpp_pdu_opt.def  smpp_pdu_skt.h  smpp_sock.h  utils.h  wap_addr.h  wap_events.h  watch_dog.h  wsp.h  wsp_caps.h  wsp_headers.h  (+5 more)
cpp/include/ksig7/: ConfigLib.h  IdLib.h  L2OamDefs.h  MTP2XOamDefs.h  PLUGIN_Common.h  PlugIn.h  TCAP_ansi.h  TCAP_ccitt.h  TCAP_common.h  TCAP_errors.h  TCAP_ext.h  TimerLib.h  ainCommon.h  ainCppCommon.h  cfgCommon.h  comCfg.h  failures.h  ksig7_static_var.h  mtpDefs.h  mtpOamDefs.h  mtpTypes.h  mtp_if_intern.h  sccpOamDefs.h  sccpTypes.h  ss7_if.h  ss7errors.h  tcapapi.h  ttlCommon.h
cpp/include/newbee/: dataElement.hpp  dataPacket.hpp  nums_constants.hpp  send_link.hpp
cpp/include/numsworker/: TcpClient.hpp  numsworker.hpp
cpp/include/osipparser2/: osip_const.h  osip_uri.h
cpp/include/prac_sync/: Worker.hpp
cpp/include/spdlog/: async.h  spdlog.h
cpp/include/xhash/: xhash.h
cpp/include/zclient/: common.hpp  zmq_client.hpp
cpp/include/zserver/: Queue.hpp  ThreadSafeQueue.hpp  common.hpp  zmq_monitor.hpp  zmq_server.hpp
cpp/lib/: CMakeLists.txt
cpp/lib/Debug/: CMakeLists.txt  Makefile  SimLog.c  libSimLog  nnlog.c
cpp/lib/FlkIconv/: CMakeLists.txt  Makefile  ascii.h  contentsConvert.c  cp949.h  euc_kr.h  flk_iconv.c  ksc5601.h  ucs2.h  ucs2.h.org  uhc_1.h  uhc_2.h  utf8.h
cpp/lib/SimCommon/: CMakeLists.txt  EIo.c  EProfile.c  Makefile  flk_string.c  lib_errmsg.c  libdbg.c  libipc.c  libnet.c  libtime.c  libutil.c  sim_table.c  util.c  util_argument.c
cpp/lib/SimMap/: CMakeLists.txt  DebugUtil.c  GsmTpduStruct.c  Makefile  MapAddrUtil.c  MapUtil.c  MapV3Address.c  TcapHandler.c  V3_ObjectId.c  V3_RoutingInfoForSMI.c  V3_RoutingInfoForSMR.c  decGsmStruct.c  decSMDPP.c  decV3_AnyTimeSubsInterrogation_Arg.c  decV3_Extension.c  decV3_MO_ForwardSM_Arg.c  decV3_MT_ForwardSM_Arg.c  decV3_ReportSM_DeliveryStatus_Arg.c  decV3_RoutingInfoForSM_Arg.c  enc2G_637.c  enc2G_Addr.c  enc2G_SMDPP.c  encGsmStruct.c  encV3_Extension.c  encV3_MO_ForwardSM_Arg.c  encV3_RoutingInfoForSM_Res.c  old_MapAddrUtil.c
cpp/lib/common/: CMakeLists.txt  configuration.cpp  home.code-workspace  loglevel_checker.cpp
cpp/lib/diameter/: Makefile  avp.c  avp.def.bak  avp_group.c  avp_group_list.c  avp_list.c  debug.c  decoder.c  dia_errcode.h  dia_intf.c  dia_intf.h  diameter.c  diameter.def.bak  encoder.c  flk_dia.h  hpux.Makefile  linux.Makefile  util.c
cpp/lib/diameter/bak/: avp.def  dia_intf.def  diameter.def
cpp/lib/diameter/test/: Makefile  aa  main.c  run
cpp/lib/flk_dbm/: Makefile  bucket.c  dbmclose.c  dbmdelete.c  dbmdirfno.c  dbmfetch.c  dbminit.c  dbmopen.c  dbmpagfno.c  dbmrdonly.c  dbmseq.c  dbmstore.c  falloc.c  findkey.c  gdbmclose.c  gdbmdelete.c  gdbmerrno.c  gdbmexists.c  gdbmfdesc.c  gdbmfetch.c  gdbmopen.c  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  gdbmstore.c  gdbmsync.c  global.c  hash.c  update.c
cpp/lib/gwlib/: Makefile  cfg.c  charset.c  conn.c  date.c  dbpool.c  dbpool_mysql.c  dict.c  fdset.c  flkini.c  gw-prioqueue.c  gw_uuid.c  gwlib.c  gwmem-check.c  gwmem-native.c  gwpoll.c  gwthread-pthread.c  hpux.Makefile  http.c  http.c.20141204ori  ipcs.c  key_value.c  linux.Makefile  log.c  mime.c  mms_cfg.c  mms_mm7soap.c  mms_msg.c  mms_queue.c  mms_strings.c  mms_strings.def  mms_uaprof.c  mms_util.c  msg.c  octstr.c  parse.c  pcre.c  pki.c  pstat.c  regex.c  (+19 more)
cpp/lib/gwlib/backup/: log.c
cpp/lib/gwlib/bak/: log.c
cpp/lib/gwlib/example/: Makefile  main.c  push_client.log.20150419-17
cpp/lib/mapDmaqi/: CMakeLists.txt  LongMsg.c  SpamMsg.c  mapDmaqi.c  mapDmaqiDebug.c  mapDmaqiEx.c
cpp/lib/mdbCommonLib/: CMakeLists.txt  StatEsmeQ.c  StatRecUtil.c  TrafficControlHandler.c  main.c  mdbAdr.c  mdbDcsEsmeTable.c  mdbDirecetInsert.c  mdbDmaqiEx.c  mdbDmaqiUtil.c  mdbErrStr.c  mdbProcStat.c  mdbQmi.c  mdbTextConfig.c  testu
cpp/lib/newbee/: CMakeLists.txt  dataElement.cpp  send_link.cpp  zmq.cpp
cpp/lib/numsworker/: CMakeLists.txt  TcpClient.cpp  numsworker.cpp
cpp/lib/prac_sync/: CMakeLists.txt  Worker.cpp
cpp/lib/zclient/: CMakeLists.txt  zmq_client.cpp
cpp/lib/zserver/: CMakeLists.txt  zmq_server.cpp
cpp/program/: CMakeLists.txt
cpp/program/coroutine/: CMakeLists.txt  coroutine.h  init.cpp  main.cpp  server.cpp  server.hpp
cpp/program/frame/: CMakeLists.txt  main.cpp
cpp/program/myapp/: CMakeLists.txt  common.h  init.cpp  main.cpp
cpp/program/newbee/: CMakeLists.txt  main.cpp
cpp/program/prac_sync/: CMakeLists.txt  main.cpp
cpp/program/thread_song/: CMakeLists.txt  main.cpp
cpp/program/zclient/: CMakeLists.txt  main.cpp
cpp/program/zserver/: CMakeLists.txt  main.cpp
(+23 files in other folders)
