add_subdirectory(SimMap)
add_subdirectory(SimCommon)
add_subdirectory(common)
add_subdirectory(Debug)
add_subdirectory(FlkIconv)
add_subdirectory(mapDmaqi)
add_subdirectory(mdbCommonLib)
add_subdirectory(newbee)
add_subdirectory(prac_sync)
add_subdirectory(zserver)
add_subdirectory(zclient)
add_subdirectory(numsworker)
